--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #302b27;
 }
-
+.container{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
