--- a/client/src/home.css
+++ b/client/src/home.css
@@ -11,3 +11,16 @@
 img{
     height: 30px;
 }
+.money-button{
+    height: 70px;
+    background: none;
+    border: none;
+}
+.form-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column; 
+    height: calc(100vh - 50px);
+    margin-top: 100px;
+}
