--- a/client/src/home.css
+++ b/client/src/home.css
@@ -5,6 +5,7 @@
     background: none;
     border: none;
 }
+.button:focus {outline:none;} ::-moz-focus-inner {border:0;}
 .money-button{
     /* background: black; */
     border-radius: 50%;
